clang/test/BSC/Negative/SafeZone/generic_member_function/generic_member_function.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

struct MyStruct<T> {
  T res;
};

_Safe T struct MyStruct<T>::foo_a(T a) {
  return a;
}

_Safe T struct MyStruct<T>::foo_b(T a) {
  return a;
}

_Safe void struct MyStruct<T>::foo_c(T a) {
  a();                                       // expected-error{{unsafe function call is forbidden in the safe zone}}
  _Unsafe {
    a();
  }
}

typedef void (*unsafeFun)(void);

void genericMemberFun() {
  int a = 1;
  int* owned p = (int* owned)&a;
  int *q = (void*)0;
  int res1 = struct MyStruct<int>::foo_a(12); // OK
  int* owned m = struct MyStruct<int* owned>::foo_a(p);   // OK 
  int *n = struct MyStruct<int*>::foo_b(q);
  unsafeFun fun_c;
  struct MyStruct<unsafeFun>::foo_c(fun_c);  // expected-note{{in instantiation of member function 'MyStruct<void (*)(void)>::foo_c' requested here}}
}// expected-error {{memory leak of value: `m`}}

trait F<T> {
  _Safe int foo(This* owned this, T b);
};

_Safe int int::foo(int* owned this, int *b) {
  return 0;
} // expected-error {{memory leak of value: `this`}}

impl trait F<int *> for int;

trait G<T> {
  int goo(This* this, T b);
};

int int::goo(int* this, int *b) {  // OK
  return 0;
}

impl trait G<int *> for int;